--- a/package.json
+++ b/package.json
@@ -13,14 +13,29 @@
         "build:server": "tsc -p tsconfig.server.json",
         "start": "NODE_ENV=production node dist/server/index.js",
         "db:generate": "drizzle-kit generate",
-        "db:migrate": "drizzle-kit migrate"
+        "db:migrate": "drizzle-kit migrate",
+        "mobile:build": "npm run build:client && npx cap sync",
+        "android:build": "npm run build:client && npx cap sync android",
+        "android:open": "npx cap open android",
+        "android:run": "npm run android:build && npx cap run android",
+        "ios:build": "npm run build:client && npx cap sync ios",
+        "ios:open": "npx cap open ios",
+        "ios:run": "npm run ios:build && npx cap run ios"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@capacitor/android": "^6.2.1",
+        "@capacitor/cli": "^6.2.1",
+        "@capacitor/core": "^6.2.1",
+        "@capacitor/ios": "^6.2.1",
+        "@capacitor/network": "^6.0.4",
+        "@capacitor/preferences": "^6.0.4",
+        "@types/cors": "^2.8.19",
         "better-sqlite3": "^11.5.0",
         "clsx": "^2.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "drizzle-orm": "^0.36.1",
         "express": "^4.21.1",
