--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,14 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.server.json" }]
+  "include": ["src/client"],
+  "exclude": ["src/server", "node_modules"]
 }
 
