--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "android:run": "npm run android:build && npx cap run android",
         "android:build-apk": "npm run android:build && cd android && export JAVA_HOME=${JAVA_HOME:-/usr/lib/jvm/java-17-openjdk-amd64} && chmod +x gradlew && ./gradlew assembleDebug && echo '✅ APK built successfully at: android/app/build/outputs/apk/debug/app-debug.apk'",
         "android:build-apk-release": "npm run android:build && cd android && export JAVA_HOME=${JAVA_HOME:-/usr/lib/jvm/java-17-openjdk-amd64} && chmod +x gradlew && ./gradlew assembleRelease && echo '✅ APK built successfully at: android/app/build/outputs/apk/release/app-release.apk'",
+        "icons:generate": "./generate-icons.sh",
         "ios:build": "npm run build:client && npx cap sync ios",
         "ios:open": "npx cap open ios",
         "ios:run": "npm run ios:build && npx cap run ios"
@@ -51,6 +52,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@capacitor/assets": "^3.0.5",
         "@types/better-sqlite3": "^7.6.11",
         "@types/express": "^5.0.0",
         "@types/node": "^22.9.0",
@@ -64,6 +66,7 @@
         "drizzle-kit": "^0.28.1",
         "nodemon": "^3.1.7",
         "postcss": "^8.4.49",
+        "sharp": "^0.34.5",
         "tailwindcss": "^3.4.15",
         "tsx": "^4.19.2",
         "typescript": "^5.6.3",
